feat: enhance audit progress UI with granular labels and subtle backgrounds

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Questrial&family=Pacifico&family=Manrope:wght@400;500;600&display=swap"
+    rel="stylesheet">
   <title>AuditPulse - AI-Powered Website Audit Platform</title>
   <meta name="description"
     content="AI-powered website audits. Analyze performance, SEO, and security in minutes. Get actionable insights to optimize your website." />
